Fix user area on mobile browser, improve sendcontrol file handling

--- a/Client/Components/Chat/SendControl.razor.css
+++ b/Client/Components/Chat/SendControl.razor.css
@@ -6,3 +6,11 @@
     align-items: center;
     gap: 0.5em;
 }
+
+.file{
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 0.3em;
+    padding: 0.3em;
+    align-items: center;
+}
